still styling the gallery

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
         </div>
         <div id="social-icons">
             <a href="https://wa.link/1rmt4r"><i class="fa-brands fa-whatsapp fa-sm-lg"></i></a></i>
-            <a href="https://www.instagram.com/invites/contact/?i=ngcyjxgtrg5a&utm_content=nil0vko"><i
+            <a href="https://www.instagram.com/frenzy_media22/"><i
                     class="fa-brands fa-instagram fa-sm-lg"></i></a>
         </div>
     </div>
@@ -69,7 +69,7 @@
 
         <div class="full-img" id="fullImgBox" onclick="closeFullImg()">
             <img src="./images/porfolio/3 b.jpg" id="full-img" alt="" style="width:100%"></a>
-            <span onclick="closeFullImg()">X</span>
+            <i class="fa-solid fa-xmark fa-2x" onclick="closeFullImg()"></i>
         </div>
 
         <!-- Portfolio Gallery Grid -->
@@ -91,12 +91,6 @@
                         style="width:100%"></a>
                 </div>
             </div>
-            <div class="column book-cover">
-                <div class="content">
-                    <img src="./images/porfolio/pq ARTS FULL.JPG" onclick="openFullImg(this.src)"
-                        style="width:100%"></a>
-                </div>
-            </div>
             <div class="column logo">
                 <div class="content">
                     <img src="./images/porfolio/Frenzy E logo.jpg" onclick="openFullImg(this.src)"
@@ -106,6 +100,12 @@
             <div class="column product-branding">
                 <div class="content">
                     <img src="./images/porfolio/LUDE.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                </div>
+            </div>
+            <div class="column book-cover">
+                <div class="content">
+                    <img src="./images/porfolio/pq ARTS FULL.JPG" onclick="openFullImg(this.src)"
+                        style="width:100%"></a>
                 </div>
             </div>
 
