--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div id="social-icons">
             <a href="https://wa.link/1rmt4r"><i class="fa-brands fa-whatsapp fa-sm-lg"></i></a></i>
-            <a href="https://www.instagram.com/invites/contact/?i=ngcyjxgtrg5a&utm_content=nil0vko"><i class="fa-brands fa-instagram fa-sm-lg"></i></a>
+            <a href="https://www.instagram.com/frenzy_media22/"><i class="fa-brands fa-instagram fa-sm-lg"></i></a>
         </div>
     </div>
     <nav id="responsive-nav">
@@ -157,7 +157,7 @@
                     <img src="./images/porfolio/UG front and back.jpg" alt="">
                     <img id="last-work" src="./images/porfolio/Snack mockup.jpg" alt="">
                 </div>
-                <a href="./portfolio page/portfolio.html" id="view-portfolio">
+                <a href="./portfolio.html" id="view-portfolio">
                     <p>View my Portfolio</p>
                     <i class="fa-solid fa-arrow-right rounded-circle"></i>
                 </a>
