arranged the image collage template

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <div id="callable-div">
             <a href="tel:+2349057359532"><i id="phone" class="fa-solid fa-phone"></i><span
                     id="number">+234-905-735-9532</span></a>
-            <a href="mailto:Uihemebiri@gmail.com"><i id="envelop" class="fa-solid fa-envelope"></i>Uihemebiri@gmail.com</a>
+            <a href="mailto:Uihemebiri@gmail.com"><i id="envelop"
+                    class="fa-solid fa-envelope"></i>Uihemebiri@gmail.com</a>
         </div>
         <div id="social-icons">
             <a href="https://wa.link/1rmt4r"><i class="fa-brands fa-whatsapp fa-sm-lg"></i></a></i>
@@ -57,7 +58,7 @@
             <article>
                 <h3>Hello, I'm Ugochukwu Ihemebiri</h3>
                 <h2>Graphic Designer</h2>
-                <a id="contact" class="rounded-pill" href="">Contact Me</a>
+                <a id="contact" class="rounded-pill" href="https://wa.link/1rmt4r">Contact Me</a>
             </article>
             <div id="person-div">
                 <img id="person" src="./images//IMG-20220520-WA0014.jpg" alt="">
@@ -136,10 +137,10 @@
                     <div id="about-me-first-div">
                         <h2>About Me</h2>
                         <h3>I am a Graphics Designer</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci vitae, asperiores fugiat
-                            assumenda repellendus reiciendis velit distinctio ipsam modi quos eveniet blanditiis facere
-                            ab
-                            repudiandae aperiam enim dignissimos.
+                        <p>Hi, I have worked for a variety of franchises to create logos, brochures,
+                            menus, product labels and countless other deliverables. My interests outside of graphic
+                            design is to producing music.
+                            Want to learn more? Click the contact me button above.
                         </p>
                     </div>
                     <div id="about-me-second-div">
