--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,7 @@
         </div>
         <div id="social-icons">
             <a href="https://wa.link/1rmt4r"><i class="fa-brands fa-whatsapp fa-sm-lg"></i></a></i>
-            <a href="https://www.instagram.com/frenzy_media22/"><i
-                    class="fa-brands fa-instagram fa-sm-lg"></i></a>
+            <a href="https://www.instagram.com/frenzy_media22/"><i class="fa-brands fa-instagram fa-sm-lg"></i></a>
         </div>
     </div>
     <nav id="responsive-nav">
@@ -85,34 +84,15 @@
                     <img src="./images/porfolio/3D.jpg" onclick="openFullImg(this.src)" alt="" style="width:100%"></a>
                 </div>
             </div>
-            <div class="column flyer">
-                <div class="content">
-                    <img src="./images/porfolio/BRILLIANT TUTORS ii g.jpg" onclick="openFullImg(this.src)"
-                        style="width:100%"></a>
-                </div>
-            </div>
             <div class="column logo">
                 <div class="content">
                     <img src="./images/porfolio/Frenzy E logo.jpg" onclick="openFullImg(this.src)"
                         style="width:100%"></a>
                 </div>
             </div>
-            <div class="column product-branding">
+            <div class="column banner">
                 <div class="content">
-                    <img src="./images/porfolio/LUDE.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                </div>
-            </div>
-            <div class="column book-cover">
-                <div class="content">
-                    <img src="./images/porfolio/pq ARTS FULL.JPG" onclick="openFullImg(this.src)"
-                        style="width:100%"></a>
-                </div>
-            </div>
-
-            <div class="column flyer">
-                <div class="content">
-                    <img src="./images/porfolio/Frenzy designs AD 3.jpg" onclick="openFullImg(this.src)"
-                        style="width:100%"></a>
+                    <img src="./images/porfolio/Banner c.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                 </div>
             </div>
             <div class="column logo">
@@ -120,9 +100,36 @@
                     <img src="./images/porfolio/Graffiti.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                 </div>
             </div>
+            <div class="column flyer">
+                <div class="content">
+                    <img src="./images/porfolio/BRILLIANT TUTORS ii g.jpg" onclick="openFullImg(this.src)"
+                        style="width:100%"></a>
+                </div>
+            </div>
+
+            <div class="column product-branding">
+                <div class="content">
+                    <img src="./images/porfolio/LUDE.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                </div>
+            </div>
             <div class="column book-cover">
                 <div class="content">
                     <img src="./images/porfolio/jz 3.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                </div>
+            </div>
+
+
+            <div class="column flyer">
+                <div class="content">
+                    <img src="./images/porfolio/Frenzy designs AD 3.jpg" onclick="openFullImg(this.src)"
+                        style="width:100%"></a>
+                </div>
+            </div>
+
+            <div class="column book-cover">
+                <div class="content">
+                    <img src="./images/porfolio/pq ARTS FULL.JPG" onclick="openFullImg(this.src)"
+                        style="width:100%"></a>
                 </div>
             </div>
             <div class="column flyer">
@@ -135,9 +142,9 @@
                     <img src="./images/porfolio/round (2).jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                 </div>
             </div>
-            <div class="column banner">
+            <div class="column flyer">
                 <div class="content">
-                    <img src="./images/porfolio/Banner c.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
+                    <img src="./images/porfolio/TT b.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                 </div>
             </div>
 
@@ -167,11 +174,7 @@
                     <img src="./images/porfolio/TT  Logo.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
                 </div>
             </div>
-            <div class="column flyer">
-                <div class="content">
-                    <img src="./images/porfolio/TT b.jpg" onclick="openFullImg(this.src)" style="width:100%"></a>
-                </div>
-            </div>
+
 
             <div class="column product-branding">
                 <div class="content">
