--- a/portfolio.html
+++ b/portfolio.html
@@ -23,14 +23,14 @@
 <body>
     <div id="top-header">
         <div id="callable-div">
-            <a href="tel:+2349057359532"><i id="phone" class="fa-solid fa-phone"></i><span
+            <a href="tel:+2349057359532" target="_blank"><i id="phone" class="fa-solid fa-phone"></i><span
                     id="number">+234-905-735-9532</span></a>
-            <a href="mailto:Uihemebiri@gmail.com"><i id="envelop"
+            <a href="mailto:Uihemebiri@gmail.com" target="_blank"><i id="envelop"
                     class="fa-solid fa-envelope"></i>Uihemebiri@gmail.com</a>
         </div>
         <div id="social-icons">
-            <a href="https://wa.link/1rmt4r"><i class="fa-brands fa-whatsapp fa-sm-lg"></i></a></i>
-            <a href="https://www.instagram.com/frenzy_media22/"><i class="fa-brands fa-instagram fa-sm-lg"></i></a>
+            <a href="https://wa.link/1rmt4r" target="_blank"><i class="fa-brands fa-whatsapp fa-sm-lg"></i></a></i>
+            <a href="https://www.instagram.com/frenzy_media22/" target="_blank"><i class="fa-brands fa-instagram fa-sm-lg"></i></a>
         </div>
     </div>
     <nav id="responsive-nav">
