--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <article>
                 <h3>Hello, I'm Ugochukwu Ihemebiri</h3>
                 <h2>Graphic Designer</h2>
-                <a id="contact" class="rounded-pill" href="https://wa.link/1rmt4r">Contact Me</a>
+                <a id="contact" class="rounded-pill" href="https://wa.link/1rmt4r" target="_blank">Contact Me</a>
             </article>
             <div id="person-div">
                 <img id="person" src="./images//IMG-20220520-WA0014.jpg" alt="">
