--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         <a href="./portfolio.html">Portfolio</a>
     </nav>
     <header>
-        <a href="/index.html" id="logo">
+        <a href="./index.html" id="logo">
             <img src="./images/Frenzy Logo re 4.png" alt="">
         </a>
 
